--- a/index.Rmd
+++ b/index.Rmd
@@ -6,6 +6,6 @@ documentclass: book
 classoption: openany
 ---
 
-# Create your open textbook
+# Preface
 
-Hello, world!!!
+This book, Disc Golf: Building Community in Brandon, is a comprehensive guide to the disc golf scene in Brandon, Manitoba. It delves into the sport's growth, the community's grassroots efforts to promote it, and offers practical advice for players of all levels. Whether you're new to disc golf or an experienced player, you'll find valuable insights and inspiration within these pages.
